moved builder documenation generation to here (to be tested), added target to generate docbook from datatypes.xml